--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-react-project",
+  "proxy": "http://localhost:8080",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,8 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
-    "proxy": "http://localhost:8080"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
